// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nutrientAnalytics  getFilteredData selects filtered data 1`] = `
Immutable.List [
  Immutable.Map {
    "prefix": "FAPU",
    "name": "Fatty acids, total polyunsaturated",
    "units": "g",
    "value": "~",
    "rdi": null,
  },
]
`;

exports[`nutrientAnalytics  getRankingResults processes searchResults 1`] = `
Object {
  "ALA": Array [],
  "ARG": Array [],
  "ASP": Array [],
  "BETN": Array [],
  "CA": Array [],
  "CARTA": Array [],
  "CARTB": Array [],
  "CHOCDF": Array [
    Immutable.Map {
      "name": "Fresh thyme",
      "id": "02049",
      "value": 1,
      "unit": "g",
    },
  ],
  "CHOLN": Array [],
  "CRYPX": Array [],
  "CU": Array [],
  "CYS": Array [],
  "ENERC": Array [],
  "ENERC_KCAL": Array [],
  "FAMS": Array [],
  "FAPU": Array [],
  "FASAT": Array [],
  "FAT": Array [],
  "FATRN": Array [],
  "FE": Array [],
  "FIBTG": Array [],
  "FLD": Array [],
  "FOL": Array [],
  "FOLAC": Array [],
  "FOLDFE": Array [],
  "FOLFD": Array [],
  "FRUS": Array [],
  "GALS": Array [],
  "GLU": Array [],
  "GLUS": Array [],
  "HISTN": Array [],
  "HYP": Array [],
  "ILE": Array [],
  "K": Array [],
  "LACS": Array [],
  "LCW3TOTAL": Array [],
  "LEU": Array [],
  "LUT+ZEA": Array [],
  "LYCPN": Array [],
  "LYS": Array [],
  "MALS": Array [],
  "MET": Array [],
  "MG": Array [],
  "MN": Array [],
  "NA": Array [],
  "NIA": Array [],
  "P": Array [],
  "PHE": Array [],
  "PRO": Array [],
  "PROCNT": Array [],
  "RETOL": Array [],
  "SE": Array [],
  "SER": Array [],
  "SUGAR": Array [],
  "THIA": Array [],
  "THR": Array [],
  "TOCPHA": Array [],
  "TOCPHB": Array [],
  "TOCPHD": Array [],
  "TRP": Array [],
  "TYR": Array [],
  "VAL": Array [],
  "VITA_IU": Array [],
  "VITA_RAE": Array [],
  "VITB6A": Array [],
  "VITC": Array [],
  "VITD": Array [],
  "VITK": Array [],
  "WATER": Array [
    Immutable.Map {
      "name": "Fresh thyme",
      "id": "02049",
      "value": 0,
      "unit": "g",
    },
  ],
  "ZN": Array [],
}
`;

exports[`nutrientAnalytics  getRankingResults processes searchResults when multiple results 1`] = `
Object {
  "ALA": Array [],
  "ARG": Array [],
  "ASP": Array [],
  "BETN": Array [],
  "CA": Array [],
  "CARTA": Array [],
  "CARTB": Array [],
  "CHOCDF": Array [
    Immutable.Map {
      "name": "Fresh thyme",
      "id": "11111",
      "value": 1,
      "unit": "g",
    },
    Immutable.Map {
      "name": "Fresh thyme",
      "id": "02049",
      "value": 1,
      "unit": "g",
    },
  ],
  "CHOLN": Array [],
  "CRYPX": Array [],
  "CU": Array [],
  "CYS": Array [],
  "ENERC": Array [],
  "ENERC_KCAL": Array [],
  "FAMS": Array [],
  "FAPU": Array [],
  "FASAT": Array [],
  "FAT": Array [],
  "FATRN": Array [],
  "FE": Array [],
  "FIBTG": Array [],
  "FLD": Array [],
  "FOL": Array [],
  "FOLAC": Array [],
  "FOLDFE": Array [],
  "FOLFD": Array [],
  "FRUS": Array [],
  "GALS": Array [],
  "GLU": Array [],
  "GLUS": Array [],
  "HISTN": Array [],
  "HYP": Array [],
  "ILE": Array [],
  "K": Array [],
  "LACS": Array [],
  "LCW3TOTAL": Array [],
  "LEU": Array [],
  "LUT+ZEA": Array [],
  "LYCPN": Array [],
  "LYS": Array [],
  "MALS": Array [],
  "MET": Array [],
  "MG": Array [],
  "MN": Array [],
  "NA": Array [],
  "NIA": Array [],
  "P": Array [],
  "PHE": Array [],
  "PRO": Array [],
  "PROCNT": Array [],
  "RETOL": Array [],
  "SE": Array [],
  "SER": Array [],
  "SUGAR": Array [],
  "THIA": Array [],
  "THR": Array [],
  "TOCPHA": Array [],
  "TOCPHB": Array [],
  "TOCPHD": Array [],
  "TRP": Array [],
  "TYR": Array [],
  "VAL": Array [],
  "VITA_IU": Array [],
  "VITA_RAE": Array [],
  "VITB6A": Array [],
  "VITC": Array [],
  "VITD": Array [],
  "VITK": Array [],
  "WATER": Array [
    Immutable.Map {
      "name": "Fresh thyme",
      "id": "11111",
      "value": 0,
      "unit": "g",
    },
    Immutable.Map {
      "name": "Fresh thyme",
      "id": "02049",
      "value": 0,
      "unit": "g",
    },
  ],
  "ZN": Array [],
}
`;
